2013-08-06 v0.0.4:

    - Remove mistakenly committed build artifact.


2013-08-06 v0.0.3:

    - Fix typo due to lack of unit tests.


2013-08-06 v0.0.2:

    - Add Makefile.
    - Add support for "postgres" scheme (in addition to "postgresql").
    - Add CHANGES.txt file.